--- a/npcs/BackUP-Mistakes/gren_hilsrega.yaml
+++ b/npcs/BackUP-Mistakes/gren_hilsrega.yaml
@@ -1,71 +1,3 @@
-﻿#
-# Vibrant Games NPC file format.
-#
-# For long fields, we should be able to embed <html-tag>...</html-tag>s,
-# if everyone is cool with that approach.  OR we could use markdown instead.
-#
-# HTML requires more discipline -- we need to come up with a CSS stylesheet,
-# and stick to using the styles defined in our stylesheet.  Markdown is
-# simpler, because we can convert and automagically apply the stylesheet.
-#
-# Long fields are of the form:
-#
-#     field: |
-#       TEMPLATE
-#       MORE TEMPLATE
-#
-# For example, with HTML tags:
-#
-#     field: |
-#       <p> Gorbonzonger the goblin is a very bad goblin.
-#       He likes to beat up kobolds. </p>
-#       <p class="small"> Kobolds deserve it, anyway. </p>
-#       <p> Gorbonzonger has an amulet made of camphor
-#       and a very long shopping list that contains many
-#       items, some very few of which include: </p>
-#       <ul>
-#       <li> toilet paper </li>
-#       <li> broccoli </li>
-#       </ul>
-#
-# Or with Markdown:
-#
-#     field: |
-#       Gorbonzonger the goblin is a very bad goblin.  He likes to beat up kobolds.
-#       Kobolds deserve it, anyway.
-#       Gorbonzonger has an amulet made of camphor and a very long shopping list that contains many items, some very few of which include:
-#       - toilet paper
-#       - broccoli
-#
-# (There might be other formatting systems worth considering, too!)
-#
-
-#
-# Currently there is no schema for this template.
-# It will take some time to create a validating schema, so that,
-# for example, many fields are optional, but some fields are
-# required; enumerated fields are only allowed to have certain
-# values; and so on.
-#
-# Once the validating schema is created (probably using
-# Open API syntax, unless anyone has any preferences), we'll
-# be able to validate submissions and accept / reject if we choose.
-#
-# Also the validating file format is the ONLY place we do
-# content validation.  The database and user interface remain
-# agnostic to the validation rules (although the submission
-# UI will be set up to make it easy to e.g. pull down enumerated
-# values).  This allows us to change the schema in ONE PLACE
-# ONLY, not have to modify multiple components (UI, database,
-# future mobile apps, etc).  The file format validator is
-# the arbiter of what's allowed and what isn't.
-#
-
-#
-# Template NPC:
-#
-
----
 
 #
 # Preliminary fields that describe this overall file:
@@ -83,27 +15,33 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: goronk
+  id: gren_hilsrega
 
   #
   # The name of the submitter (your name).
   #
-  author: Mike Rigby
+  author: vibrantgames
 
   #
   # Email address of the submitter.
   #
-  email: rigbyma@hotmail.com
+  # WordPress to YAML conversion:
+  # Unfortunately I do not see the author email
+  # addresses anywhere in the export file.  :(
+  # I guess we decided it was not an important field.
+  # This was a pretty bad oversigh.  :(
+  #
+  email: UNKNOWN@example.com
 
   #
   # Date the NPC was created.
   # Must be in ISO 8601 format.
   # You can include the time if you want.
   #
-  # E.g. "2021-12-31"
-  #      "2021-12-31 23:59:59"
+  # E.g. 2021-12-31
+  #      2021-12-31 23:59:59
   #
-  date: "2021-05-27"
+  date: 2021-02-04 19:51:00
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -113,9 +51,7 @@ metadata:
   # Optional.
   #
   labels:
-  - label_template_1: TEMPLATE
-  - label_template_2: TEMPLATE
-  - label_template_3: TEMPLATE
+  - wordpress_id: 1344
 
   #
   # In future more metadata will likely be needed.
@@ -134,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Goronk
+  name: Wureok Hilsregaas
 
   #
   # The NPC artwork.
@@ -146,7 +82,7 @@ npc:
   # For now let us keep all images in one directory,
   # at least until that becomes a scaling nightmare.
   #
-  image: TEMPLATE_McTEMPLATESON.jpg
+  # image: NO_ARTWORK_AT_TIME_OF_CONVERSION
 
   #
   # Race, class, etc.
@@ -165,7 +101,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: older adult
 
     #
     # Races (case insensitive):
@@ -187,7 +123,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Hobgoblin
+    race: dragonborn
 
     #
     # The sub-race can be anything.
@@ -196,7 +132,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: N/A
+    # sub-race: NONE.
 
     #
     # Pronouns (case insensitive):
@@ -215,8 +151,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Mercenary
-    
+    - Castellan
 
     #
     # D & D classes (case insensitive):
@@ -224,7 +159,7 @@ npc:
     # - artificer
     # - barbarian
     # - bard
-    # - blood hunter
+    # - bloodhunter
     # - cleric
     # - druid
     # - fighter
@@ -239,30 +174,7 @@ npc:
     #
     # Required.
     #
-    class: Fighter
-
-    #
-    # D & D subclasses (case insensitive):
-    # - civilian
-    # - alchemist
-    # - Path of the Berserker
-    # - College of Lore
-    # - Order of the Profane Soul
-    # - Grave Domain
-    # - Cirlce of the Moon
-    # - Battle Master
-    # - Way of Shadow
-    # - Oath of Redemption
-    # - Gloom Stalker
-    # - Thief
-    # - Path of the Spirit
-    # - Aberrant Mind
-    # - Hexblade
-    # - School of Abjuration
-    #
-    # Required.
-    #
-    subclass: Battle Master
+    class: sorcerer
 
     #
     # Class level.
@@ -271,7 +183,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 3
+    level: 10
 
     #
     # Alignments (case insensitive):
@@ -287,7 +199,7 @@ npc:
     #
     # Required.
     #
-    alignment: Lawful Evil
+    alignment: lawful evil
 
     #
     # Alignment tendencies:
@@ -295,8 +207,6 @@ npc:
     #
     # Optional.
     #
-    tendencies:
-    - N/A
 
     #
     # Languages the character speaks
@@ -310,9 +220,11 @@ npc:
     # 0 o more.  (I.e. optional, but most characters speak at least 1.)
     #
     languages:
+    - Draconic
+    - Elven
     - Common
-    - Goblin
-    - Undercommon
+    - Dwarven
+    - Gnome
 
     #
     # Factions:
@@ -325,29 +237,26 @@ npc:
     #   role: Associate Professor of Lockpicking
     # - id: union_of_seamstresses
     #   name: Union of Seamstresses
-    #   role: Window dressing    # - id: cult_of_sky_anthologies
+    #   role: Window dressing
+    # - id: cult_of_sky_anthologies
     #   name: Cult of Sky Anthologies
     #   role: Going Clear Sky pastor
     #
     # Optional.  0 or more.
     #
     factions:
-    - id: mercenary_militia
-      name: Mercenary Militia
-    - id: adventurer_s_guild
-      name: Adventurer's Guild
-    - id: hobgoblin_goblin_clan
-      name: Hobgoblin/Goblin Clan
+    - id: regional_rebel_faction
+      name: Regional Rebel Faction
+      role: Leader
+    - id: baron_royals
+      name: Baron/Royals
+      role: Castellan
 
     #
     # Adjectives or other tags that can be used for searching.
     #
     # Optional.  0 or more.
     #
-    adjectives:
-    - Gruff
-    - Capable
-    - Dangerous
 
   improv:
 
@@ -362,7 +271,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Looking to hire a mercenary fighter to even out the odds? Goronk is your man...err... hobgoblin
+    introduction: A robed dragonborn, gnarled hound, and equipped militia stroll from the castle gates. "What business have ye here?"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -373,7 +282,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   5'5", Broad as a barn. Deep red skin, lots of scars and some pretty top notch armor. Very well dressed for his kind
+    appearance:   Green, polished scales. Tendril locks of grey hair. Cloudy yellow eyes. Fine magistrate robes.
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -389,9 +298,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:
-    - "You are weak!"
-    - "The money pays for food and weapons, but I fight because those who don't are weak and pathetic"
+    expressions: $characters$ "The regals are on travel-time. If you have business, it is with me", "Our time is valuable. Make it quick."
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -404,7 +311,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Picks at his scars
+    mannerisms:   Hands clasped. Cloudy eyes strain to see clearly.  Small but effective gestures. Slight limp in right leg.
 
   acting:
     #
@@ -414,7 +321,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Proving his martial prowess, building his reputation, money
+      To serve the noble family for whom he serves as castellan and deputy. Ensure all taxes and scutages are paid, always.
 
     #
     # Passions:
@@ -423,7 +330,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Fighting. His strength is the basis of his identity
+      Gold. Power. He seeks to replace his benefactors eventually.
 
     #
     # Vulnerabilities:
@@ -431,8 +338,6 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    vulnerabilities: |
-      Ego, quick to anger, doesn't know when to back down
 
     #
     # Secrets:
@@ -440,23 +345,23 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: | 
-      He really does like the money and the comforts it buys him
+    secrets: |
+      Has begun an underground rebel faction to replace the royals of the region.
 
   #
   # The D & D stats block:
   # All integers.
   #
   stats:
-    armour-class: 16
-    hit-points: 38
-    speed: 30
-    str: 18
-    dex: 13
-    con: 13
-    int: 15
-    wis: 9
-    cha: 11
+    armour-class: 10
+    hit-points: 44
+    speed: 20
+    str: 8
+    dex: 9
+    con: 15
+    int: 17
+    wis: 16
+    cha: 19
 
   #
   # Special characteristics.
@@ -467,34 +372,27 @@ npc:
   #
   specialties:
     skills:
-    - Hobgoblin Abilities:
-      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
-        Martial Training: You are proficient with two martial weapons of your choice and with light armor.
-        Saving Face: Hobgoblins are careful not to show weakness in front of their allies, for fear of losing status. If you miss with an attack roll or fail an ability check or a saving throw, you can gain a bonus to the roll
-                     equal to the number of allies you can see within 30 feet of you
-      Fighter Abilities:
-      - Fighting Style: Two Weapon Fighting
-        Second Wind: Bonus Action to regain 1d10 + 
-        Action Surge: Once every short/long rest can take an extra action
-      Battle Master Abilities:
-      - Combat Superiority: 
-        - Description: 4 Superiority Dice. Saving Throw DC 13
-          Additional Information:
-          - Maneuvers:
-            - Disarming Attack
-            - Menacing Attack
-            - Trip Attack
-          Student of War: Proficient in Smith's Tools
-
-    special-abilities:
-    - Proficiencies: Survival, Intimidation   
+    - Arcana
+    - History
+    - Politics
+    - Deception
+    - Insight
+    - Persuasion
+    special-abilities: |
+      Font of Magic; Eyes of the Dark; Strength of the Grave; Hound of Ill Omen; 
+      |
+      Spells: 0 - 6; 1 - 5; 2 - 3; 3 - 3; 4 - 3; 5 - 2
+      |
+      Breath Weapon - Poison
     attacks: |
-      2 attacks with 2 Long Swords
+      Staff of Defense
+      |
+      Breath Weapon
     combat-tactics: |
-      Will use his Combat Maneuvers to outwit opponents. Will never shy away from a fight
+      Gren is not to be underestimated. He is a fierce combatant. He will almost exclusively slowly draw back from melee and allow his guards to fill in the ranks while he casts vicious spells from not far away.
     special-equipment:
-    - 2x +1 Long swords
-    - Half Plate
+    - Cloak of Protection +3
+    - Staff of Defense simple weapon, melee weapon, rare (requires attunement).  1d6 bludgeoning, versatile (1d8).  This slender hollow staff is made of glass yet is as strong as oak. It weighs 3 pounds. You must be attuned to the staff to gain its benefits and cast its spells.  While holding the staff, you have a +1 bonus to your Armor Class.  The staff has 10 charges, which are used to fuel the spells within it. With the staff in hand, you can use your action to cast one of the following spells from the staff if the spell is on your class's spell list: mage armor (1 charge) or shield (2 charges). No components are required.  The staff regains 1d6 + 4 expended charges each day at dawn. If you expend the staff's last charge, roll a d20. On a 1, the staff shatters and is destroyed.  Versatile. This weapon can be used with one or two hands. A damage value in parentheses appears with the property—the damage when the weapon is used with two hands to make a melee attack.
 
   profile:
 
@@ -506,11 +404,8 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Like most of his kind Goronk finds his identity by proving his martial prowess. Those who don't or won't fight are weak in his eyes. He doesn't trust magic users, he sees it as a crutch and believes that martial weapons
-      are the only way to go. He's fairly easy to barter with for his services as hes more concerned with building his reputation as a fighter than he is with the money side of things. He's completely unconcerned with the moral
-      side of his profession and will just as happily work with raiders raiding a village as he would fighting bad guys, as long as he gets to fight
+      <p>With nothing but selfish goals, Wureok joined the local guild of Magic Arts and, with his exceptional cunning and charisma, worked his way into an internship with the castellan at the time. Using his raw magicks and ability to influence others, he ousted the castellan by convincing the noble family they served that he was an imposter - a foreigner looking to undermine their power.</p> <p>Gaining the trust of the royals over decades and generations, Wureok has, at least on the surface, appeared to be an exemplary court official. He watches over the castle and surrounding villas with great attention to detail; especially when it comes to collecting taxes and scutage.</p><p>Wureok has organized a growing rebel faction among the peasants and townsfolk, using the pressures he himself applies to turn them against his benefactor, then twisting the stories of uprisings in reports to his benefactor. He thereby presents further reason for his position, for the further exploitation of the common-folk, and for the royal family to further insulate themselves from the outside world.</p>
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -519,6 +414,16 @@ npc:
     # Required.
     # No length limit for now.
     #
-    personality: |
-      5'5", Broad as a barn. Deep red skin, lots of scars and some pretty top notch armor. Very well dressed for his kind
-  
+
+  #
+  # Content that does not get displayed, but could be useful
+  # to humans.  Includes review comments, notes about what to
+  # do for the NPC art, or whatever else we need.
+  #
+  # Optional.
+  #
+  uncategorized:
+  - wp:status: publish
+  - subclass: Shadow Magic
+  - _yoast_wpseo_focuskeywords: []
+  - _yoast_wpseo_keywordsynonyms: [""]
