--- a/npcs/BackUP-Mistakes/hathunti.yaml
+++ b/npcs/BackUP-Mistakes/hathunti.yaml
@@ -1,71 +1,3 @@
-﻿#
-# Vibrant Games NPC file format.
-#
-# For long fields, we should be able to embed <html-tag>...</html-tag>s,
-# if everyone is cool with that approach.  OR we could use markdown instead.
-#
-# HTML requires more discipline -- we need to come up with a CSS stylesheet,
-# and stick to using the styles defined in our stylesheet.  Markdown is
-# simpler, because we can convert and automagically apply the stylesheet.
-#
-# Long fields are of the form:
-#
-#     field: |
-#       TEMPLATE
-#       MORE TEMPLATE
-#
-# For example, with HTML tags:
-#
-#     field: |
-#       <p> Gorbonzonger the goblin is a very bad goblin.
-#       He likes to beat up kobolds. </p>
-#       <p class="small"> Kobolds deserve it, anyway. </p>
-#       <p> Gorbonzonger has an amulet made of camphor
-#       and a very long shopping list that contains many
-#       items, some very few of which include: </p>
-#       <ul>
-#       <li> toilet paper </li>
-#       <li> broccoli </li>
-#       </ul>
-#
-# Or with Markdown:
-#
-#     field: |
-#       Gorbonzonger the goblin is a very bad goblin.  He likes to beat up kobolds.
-#       Kobolds deserve it, anyway.
-#       Gorbonzonger has an amulet made of camphor and a very long shopping list that contains many items, some very few of which include:
-#       - toilet paper
-#       - broccoli
-#
-# (There might be other formatting systems worth considering, too!)
-#
-
-#
-# Currently there is no schema for this template.
-# It will take some time to create a validating schema, so that,
-# for example, many fields are optional, but some fields are
-# required; enumerated fields are only allowed to have certain
-# values; and so on.
-#
-# Once the validating schema is created (probably using
-# Open API syntax, unless anyone has any preferences), we'll
-# be able to validate submissions and accept / reject if we choose.
-#
-# Also the validating file format is the ONLY place we do
-# content validation.  The database and user interface remain
-# agnostic to the validation rules (although the submission
-# UI will be set up to make it easy to e.g. pull down enumerated
-# values).  This allows us to change the schema in ONE PLACE
-# ONLY, not have to modify multiple components (UI, database,
-# future mobile apps, etc).  The file format validator is
-# the arbiter of what's allowed and what isn't.
-#
-
-#
-# Template NPC:
-#
-
----
 
 #
 # Preliminary fields that describe this overall file:
@@ -83,27 +15,33 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: goronk
+  id: hathunti
 
   #
   # The name of the submitter (your name).
   #
-  author: Mike Rigby
+  author: vibrantgames
 
   #
   # Email address of the submitter.
   #
-  email: rigbyma@hotmail.com
+  # WordPress to YAML conversion:
+  # Unfortunately I do not see the author email
+  # addresses anywhere in the export file.  :(
+  # I guess we decided it was not an important field.
+  # This was a pretty bad oversigh.  :(
+  #
+  email: UNKNOWN@example.com
 
   #
   # Date the NPC was created.
   # Must be in ISO 8601 format.
   # You can include the time if you want.
   #
-  # E.g. "2021-12-31"
-  #      "2021-12-31 23:59:59"
+  # E.g. 2021-12-31
+  #      2021-12-31 23:59:59
   #
-  date: "2021-05-27"
+  date: 2021-01-28 00:54:51
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -113,9 +51,7 @@ metadata:
   # Optional.
   #
   labels:
-  - label_template_1: TEMPLATE
-  - label_template_2: TEMPLATE
-  - label_template_3: TEMPLATE
+  - wordpress_id: 1009
 
   #
   # In future more metadata will likely be needed.
@@ -134,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Goronk
+  name: Hathunti
 
   #
   # The NPC artwork.
@@ -146,7 +82,7 @@ npc:
   # For now let us keep all images in one directory,
   # at least until that becomes a scaling nightmare.
   #
-  image: TEMPLATE_McTEMPLATESON.jpg
+  # image: NO_ARTWORK_AT_TIME_OF_CONVERSION
 
   #
   # Race, class, etc.
@@ -165,7 +101,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: young adult
 
     #
     # Races (case insensitive):
@@ -187,7 +123,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Hobgoblin
+    race: aetherborn
 
     #
     # The sub-race can be anything.
@@ -196,7 +132,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: N/A
+    # sub-race: NONE.
 
     #
     # Pronouns (case insensitive):
@@ -206,7 +142,7 @@ npc:
     #
     # Required.
     #
-    pronouns: he/him
+    pronouns: they/them
 
     #
     # Occupation(s).
@@ -215,8 +151,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Mercenary
-    
+    - Saboteur, Anarchist
 
     #
     # D & D classes (case insensitive):
@@ -224,7 +159,7 @@ npc:
     # - artificer
     # - barbarian
     # - bard
-    # - blood hunter
+    # - bloodhunter
     # - cleric
     # - druid
     # - fighter
@@ -239,30 +174,7 @@ npc:
     #
     # Required.
     #
-    class: Fighter
-
-    #
-    # D & D subclasses (case insensitive):
-    # - civilian
-    # - alchemist
-    # - Path of the Berserker
-    # - College of Lore
-    # - Order of the Profane Soul
-    # - Grave Domain
-    # - Cirlce of the Moon
-    # - Battle Master
-    # - Way of Shadow
-    # - Oath of Redemption
-    # - Gloom Stalker
-    # - Thief
-    # - Path of the Spirit
-    # - Aberrant Mind
-    # - Hexblade
-    # - School of Abjuration
-    #
-    # Required.
-    #
-    subclass: Battle Master
+    class: rogue
 
     #
     # Class level.
@@ -271,7 +183,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 3
+    level: 8
 
     #
     # Alignments (case insensitive):
@@ -287,7 +199,7 @@ npc:
     #
     # Required.
     #
-    alignment: Lawful Evil
+    alignment: chaotic neutral
 
     #
     # Alignment tendencies:
@@ -295,8 +207,6 @@ npc:
     #
     # Optional.
     #
-    tendencies:
-    - N/A
 
     #
     # Languages the character speaks
@@ -311,8 +221,8 @@ npc:
     #
     languages:
     - Common
-    - Goblin
-    - Undercommon
+    - Aetherborn
+    - Thieve's Cant
 
     #
     # Factions:
@@ -325,19 +235,13 @@ npc:
     #   role: Associate Professor of Lockpicking
     # - id: union_of_seamstresses
     #   name: Union of Seamstresses
-    #   role: Window dressing    # - id: cult_of_sky_anthologies
+    #   role: Window dressing
+    # - id: cult_of_sky_anthologies
     #   name: Cult of Sky Anthologies
     #   role: Going Clear Sky pastor
     #
     # Optional.  0 or more.
     #
-    factions:
-    - id: mercenary_militia
-      name: Mercenary Militia
-    - id: adventurer_s_guild
-      name: Adventurer's Guild
-    - id: hobgoblin_goblin_clan
-      name: Hobgoblin/Goblin Clan
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -345,9 +249,7 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Gruff
-    - Capable
-    - Dangerous
+    - Chaotic
 
   improv:
 
@@ -362,7 +264,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Looking to hire a mercenary fighter to even out the odds? Goronk is your man...err... hobgoblin
+    introduction: An explosion rocks a building one street over, an Aetherborn comes tearing around the corner barreling into the party
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -373,7 +275,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   5'5", Broad as a barn. Deep red skin, lots of scars and some pretty top notch armor. Very well dressed for his kind
+    appearance:   Small, lithe and faceless with shining blue eyes and fine leather armor covering ashen skin
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -389,9 +291,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:
-    - "You are weak!"
-    - "The money pays for food and weapons, but I fight because those who don't are weak and pathetic"
+    expressions:  Boom!!!, "Coming Through!, Wasn't here, Nobody saw nuthin!" "Fire is your friend!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -404,7 +304,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Picks at his scars
+    mannerisms:   
 
   acting:
     #
@@ -414,7 +314,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Proving his martial prowess, building his reputation, money
+      The unbridled excitement of absolute chaos. The thrill of danger
 
     #
     # Passions:
@@ -423,7 +323,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Fighting. His strength is the basis of his identity
+      The thrill and adrenaline that comes with danger and chaos
 
     #
     # Vulnerabilities:
@@ -432,7 +332,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      Ego, quick to anger, doesn't know when to back down
+      Brash. Conceited, Reckless
 
     #
     # Secrets:
@@ -440,23 +340,23 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: | 
-      He really does like the money and the comforts it buys him
+    secrets: |
+      Where the rebel groups meet and their plans for disrupting the Consulate
 
   #
   # The D & D stats block:
   # All integers.
   #
   stats:
-    armour-class: 16
-    hit-points: 38
-    speed: 30
-    str: 18
-    dex: 13
-    con: 13
+    armour-class: 14
+    hit-points: 31
+    speed: 35
+    str: 12
+    dex: 16
+    con: 14
     int: 15
-    wis: 9
-    cha: 11
+    wis: 11
+    cha: 17
 
   #
   # Special characteristics.
@@ -466,35 +366,22 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Hobgoblin Abilities:
-      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
-        Martial Training: You are proficient with two martial weapons of your choice and with light armor.
-        Saving Face: Hobgoblins are careful not to show weakness in front of their allies, for fear of losing status. If you miss with an attack roll or fail an ability check or a saving throw, you can gain a bonus to the roll
-                     equal to the number of allies you can see within 30 feet of you
-      Fighter Abilities:
-      - Fighting Style: Two Weapon Fighting
-        Second Wind: Bonus Action to regain 1d10 + 
-        Action Surge: Once every short/long rest can take an extra action
-      Battle Master Abilities:
-      - Combat Superiority: 
-        - Description: 4 Superiority Dice. Saving Throw DC 13
-          Additional Information:
-          - Maneuvers:
-            - Disarming Attack
-            - Menacing Attack
-            - Trip Attack
-          Student of War: Proficient in Smith's Tools
-
-    special-abilities:
-    - Proficiencies: Survival, Intimidation   
+    special-abilities: |
+      Demolitions Expert
+      |
+      Alchemy
+      |
+      Improvised Trap Building
+      |
+      Stealth
+      |
+      Trap Building
     attacks: |
-      2 attacks with 2 Long Swords
-    combat-tactics: |
-      Will use his Combat Maneuvers to outwit opponents. Will never shy away from a fight
+      Fire and Explosives
+      |
+      Traps
     special-equipment:
-    - 2x +1 Long swords
-    - Half Plate
+    - N/A
 
   profile:
 
@@ -506,11 +393,8 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Like most of his kind Goronk finds his identity by proving his martial prowess. Those who don't or won't fight are weak in his eyes. He doesn't trust magic users, he sees it as a crutch and believes that martial weapons
-      are the only way to go. He's fairly easy to barter with for his services as hes more concerned with building his reputation as a fighter than he is with the money side of things. He's completely unconcerned with the moral
-      side of his profession and will just as happily work with raiders raiding a village as he would fighting bad guys, as long as he gets to fight
+      Early in Their short life, Hathunti discovered their distaste for authority and the trill of danger. Since then, they have aligned themselves with the Kaladeshi rebels as the way they could cause the most chaos and disruption for the Consulate authorities.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -519,6 +403,15 @@ npc:
     # Required.
     # No length limit for now.
     #
-    personality: |
-      5'5", Broad as a barn. Deep red skin, lots of scars and some pretty top notch armor. Very well dressed for his kind
-  
+
+  #
+  # Content that does not get displayed, but could be useful
+  # to humans.  Includes review comments, notes about what to
+  # do for the NPC art, or whatever else we need.
+  #
+  # Optional.
+  #
+  uncategorized:
+  - wp:status: publish
+  - _yoast_wpseo_focuskeywords: []
+  - _yoast_wpseo_keywordsynonyms: [""]
